[project]
name = "5am"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["textual>=0.60.0"]

[project.scripts]
5am = "main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "db"]

[tool.setuptools.data-files]
"." = ["nmap_game.json"]
